Added separate header

--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Apprun</title>
+  <title>Apprun Pretty URLs</title>
 </head>
 <body>
-  <header>
-   <ul>
-     <li><a href='/'>Home</a></li>
-     <li><a href='/contact'>Contact</a></li>
-     <li><a href='/about'>About</a></li>
-   </ul>
- </header>
+  <header id='header'></header>
   <section id='app'></section>
+
   <script src='app.js'></script>
 </body>
 </html>
